--- a/Readme
+++ b/Readme
@@ -13,7 +13,15 @@ created ROUTES
 backend ready!!
 4)
 npm i --save-dev concurrently
+npx create-react-app .
 created frontend and changed package.json to run back and front with one command
+
+-FrontEnd
+5) 
+npm i react-router-dom
+clean from react-app
+App.js -router
+NavBar
 
 
 
