--- a/Readme
+++ b/Readme
@@ -31,6 +31,10 @@ SideDrawer
 BackDrop
 functionality of showing and hidding SideDrawer is in
 App.js - NavBar.js - SideDrawer.js - BackDrop.js and CSSs
+8)
+CartScreen
+CartItem
+9)
 
 
 
